--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -2,20 +2,40 @@
   display: flex;
   flex-direction: column;
   margin: 5vmin;
-  margin-left: 10vmin;
-  margin-right: 10vmin;
+  margin-left: 30vmin;
+  margin-right: 30vmin;
+  text-align: center;
+}
+
+@media only screen and (max-width: 600px) {
+  .App {
+    margin-left: 10vmin;
+    margin-right: 10vmin;
+  }
 }
 
 /* -- Navbar -- */
 
 .navbar {
-  text-align: center;
   padding: 2vmin;
   font-size: 24px;
+  display: flex;
+  flex-direction: row;
+}
+
+@media only screen and (max-width: 600px) {
+  .navbar {
+    flex-direction: column;
+  }
+}
+
+.logo-container {
+  flex-grow: 1;
+  align-self: center;
 }
 
 .links {
-  float: right;
+  justify-content: flex-end;
 }
 
 a {
@@ -39,7 +59,6 @@ a:hover:not(.logo) {
   font-weight: 700;
   float: left;
   position: relative;
-  text-align: center;
 }
 
 .logo::before {
@@ -50,8 +69,7 @@ a:hover:not(.logo) {
   width: 100%;
   height: 0;
   transition: height 0.3s;
-  background: color-mix(in srgb, yellow 50%, transparent);
-
+  background: color-mix(in srgb, dodgerblue 50%, transparent);
 }
 
 .logo:hover::before {
@@ -61,10 +79,9 @@ a:hover:not(.logo) {
 }
 
 .home {
-  text-align: center;
+  
 }
 
 .footer {
   margin: auto;
-  text-align: center;
 }
