--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -1,17 +1,24 @@
+/* For debugging only */
+/* * { outline: 1px solid red; }  */
+
 :root {
-  --blue: #1d4e89; 
-  --light-blue: #002bca;
-  --black: #212155;
+  --blue: #002bca; 
+  --light-blue: #1d4e89; 
+  --black: #11113d;
+  --white: #FAF9F6F9F6EE;
+}
+
+body {
+  background-color: var(--white);
 }
 
 .App {
   display: flex;
   flex-direction: column;
   margin: 5vmin;
-  margin-left: 30vmin;
-  margin-right: 30vmin;
+  margin-left: 45vmin;
+  margin-right: 45vmin;
   text-align: center;
-  color: black;
 }
 
 @media only screen and (max-width: 600px) {
@@ -22,9 +29,10 @@
 }
 
 .navbar {
-  padding: 2vmin;
-  font-size: 24px;
+  padding: 0;
+  font-size: 20px;
   display: flex;
+  margin-bottom: 10vmin;
 }
 
 .logo-container {
@@ -52,9 +60,11 @@
 }
 
 .logo {
-  font-weight: 700;
+  font-weight: 650;
   float: left;
   position: relative;
+  text-transform: uppercase;
+  letter-spacing: 2px;
 }
 
 .logo::before {
@@ -65,7 +75,7 @@
   width: 100%;
   height: 0;
   transition: height 0.3s;
-  background: color-mix(in srgb, blue 50%, transparent);
+  background: color-mix(in srgb, var(--blue) 50%, transparent);
 }
 
 .logo:hover::before {
@@ -84,33 +94,65 @@ a {
 }
 
 a:visited {
-  color: black;
+  color: var(--black);
 }
 
 a:hover:not(.logo) {
-  color: blue;
+  color: var(--blue);
 }
 
-.jumbotron {
+.profile {
   display: flex;
   flex-direction: row;
-  margin: 10px;
+  margin-bottom: 10vmin;
+  /* border: 5px solid red; */
 }
 
-.jumbotron > .introduction {
+.profile > .introduction {
   align-self: center;
   flex-grow: 1;
-  padding: 1vmin;
+}
+
+.picture {
+  display: flex;
+  align-content: center;
+}
+
+.picture img {
+  width: 20vmin;
+  height: 18vmin;
+  border-radius: 50%;
+  margin-right: 5vmin;
+}
+
+.introduction {
+  flex-direction: column;
+  /* border: 1px solid black; */
 }
 
 .introduction > h1 {
+  font-size: 24px;
   margin: 0;
-  text-transform: uppercase;
+  /* border: 1px solid black; */
+  text-align: left;
 }
 
-.introduction > h2 {
-  margin: 0;
+.introduction > .blurb {
   color: #9CA3AF;
+  font-size: 24px;
+  margin: 0;
+  /* border: 1px solid black; */
+  text-align: left;
+}
+
+.socials {
+  margin-top: 4vmax;
+  text-align: left;
+}
+
+.socials a {
+  padding-inline: 10px;
+  font-size: 18px;
 }
 
 .footer {
