--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -1,11 +1,11 @@
 /* For debugging only */
-* { outline: 1px solid #e6e3db; } 
+/* * { outline: 1px solid #e6e3db; }  */
 
 :root {
   --blue: #002bca; 
   --light-blue: #1d4e89; 
   --black: #11113D;
-  --white: #FAF9F6;
+  --white: #FAFAFA;
 }
 
 body {
@@ -139,7 +139,7 @@ a:hover:not(.logo) {
 .picture img {
   width: 20vmin;
   height: 18vmin;
-  border-radius: 50%;
+  /* border-radius: 50%; */
   margin-right: 5vmin;
 }
 
@@ -174,7 +174,22 @@ a:hover:not(.logo) {
 }
 
 .footer {
-  margin: auto;
+  display: flex;
+}
+
+.footer div:nth-child(1) {
+  flex-grow: 1;
+  text-align: left;
+}
+
+.footer div:nth-child(2) {
+  display: flex;
+  flex-grow: 1;
+  justify-content: right;
+}
+
+.footer div:nth-child(2) p {
+  padding-inline: 10px;
 }
 
 .projects-list {
