--- a/ui/src/styles/App.css
+++ b/ui/src/styles/App.css
@@ -18,33 +18,27 @@ body {
   display: flex;
   flex-direction: column;
   text-align: center;
-  margin-left: 20vmin;
-  margin-right: 20vmin;
-}
-
-.home {
-}
-
-@media only screen and (max-width: 640px) {
-  .home {
-    margin: 0;
-  }
+  margin-left: 10vmin;
+  margin-right: 10vmin;
 }
 
 .navbar {
-  font-size: 20px;
+  font-size: 1.4rem;
   display: flex;
   margin-top: 3vmin;
+  justify-content: space-between;
+}
+
+.navbar > div {
+  margin: 0 5vmin;
 }
 
 .logo-container {
-  flex-grow: 1;
   align-content: center;
 }
 
-.navbar > .links {
+.navbar .links {
   display: flex;
-  flex-grow: 1;
   justify-content: flex-end;
 }
 
@@ -106,45 +100,47 @@ a:hover:not(.logo) {
 .profile {
   display: flex;
   flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
   height: 100vh;
   /* border: 5px solid red; */
+}
+
+.profile .item1 {
+  background-color: blue;
 }
 
 .profile > .introduction {
   /* align-self: auto; */
   align-self: center;
-  flex: 1;
   display: flex;
   flex-direction: column;
   align-content: center;
-  
 }
 
 .picture {
-  align-self: center;
-  display: flex;
-  flex: 1;
-  justify-content: center;
+  width: 30rem; 
 }
 
-.picture img {
-  width: 25em;
+.picture > img {
+  max-width: 100%;
   /* border-radius: 50%; */
 }
 
 .introduction > h1 {
-  font-size: 48px;
-  margin: auto 0;
+  font-size: 3rem;
+  display: inline;
   /* border: 1px solid black; */
   text-align: left;
+  margin: 0;
 }
 
 .introduction > .blurb {
   color: #9CA3AF;
-  font-size: 28px;
-  margin: 0;
+  font-size: 2rem;
   /* border: 1px solid black; */
   text-align: left;
+  margin: 0;
 }
 
 .socials {
@@ -159,9 +155,8 @@ a:hover:not(.logo) {
 
 .socials a {
   padding-inline: 10px;
-  font-size: 18px;
+  font-size: 1.2rem;
 }
-
 
 @media only screen and (max-width: 640px) {
   .profile {
@@ -174,19 +169,16 @@ a:hover:not(.logo) {
     margin: 0;
   }
   .introduction > h1 {
-    font-size: 28px;
+    font-size: 1.3rem;
     text-align: center;
     margin: 0;
   }
   .introduction > .blurb {
-    font-size: 20px;
+    font-size: 1.1rem;
     text-align: center;
   }
   .picture {
-    display: flex;
-    flex: 0;
-    align-self: center;
-    justify-content: center;
+    width: 10rem;
     order: 1;
   }
   .picture img {
@@ -198,28 +190,19 @@ a:hover:not(.logo) {
   }
   .socials > a {
     text-align: center;
-    font-size: 18px;
+    font-size: 0.9rem;
     padding-inline: 5px;
   }
 }
 
 .footer {
   display: flex;
+  justify-content: space-between;
 }
 
-.footer div:nth-child(1) {
-  flex-grow: 1;
-  text-align: left;
-}
-
-.footer div:nth-child(2) {
-  display: flex;
-  flex-grow: 1;
-  justify-content: right;
-}
-
-.footer div:nth-child(2) p {
-  padding-inline: 10px;
+.footer div:nth-child(2) > p {
+  display: inline-block;
+  padding-inline: 1rem;
 }
 
 .projects-list {
