--- a/ui/src/styles/Profile.css
+++ b/ui/src/styles/Profile.css
@@ -83,6 +83,7 @@
 @media only screen and (max-width: 640px) {
     .profile {
         flex-direction: column;
+        justify-content: flex-start;
         margin: 0;
     }
 
