--- a/ui/src/styles/ProjectCard.css
+++ b/ui/src/styles/ProjectCard.css
@@ -1,8 +1,8 @@
 .project-card {
     /* Add shadows to create the "card" effect */
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    transition: 0.3s;
-    width: 20em;
+    transition: 0.3s;   
+    max-width: 20em;
 }
 
 /* On mouse-over, add a deeper shadow */
@@ -10,13 +10,67 @@
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
-.card-image {
-    width: 20em;
-    max-height: 100%;
+.project-card img {
     max-width: 100%;
+    margin-top: 1em;
+    border-radius: 5%;
+}
+
+.image-container {
+    margin: 1em;
 }
 
 /* Add some padding inside the card container */
 .card-info {
-    padding: 2px 16px;
+    margin: 1em 1em;    
+}
+
+.card-info > .heading {
+    font-size: 2em;
+    text-align: left;
+    margin: 0;
+}
+
+.card-info > .subtitle {
+    font-size: 1.25em;
+    margin: 0;
+    color: gray;
+    text-align: left;
+}
+
+.card-info > .body {
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+    font-size: 1em;
+    text-align: left;
+    white-space: pre-line;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-height: 8em;
+}
+
+.buttons-container {
+    display: block; 
+    height: 1vmax;
+}
+
+.primary-btn {
+    background-color: var(--color1);
+    border: none;
+    font-weight: 600;
+    color: white;
+    padding: 10px;
+    font-size: 1em;
+    float: right;
+    margin: 1em 1em;
+}
+
+@media only screen and (max-width: 640px) {
+    .project-card {
+        width: 100%;
+    }
+    .buttons-container {
+        height: 10vmax;
+    }
 }
