--- a/ui/src/styles/ProjectCard.css
+++ b/ui/src/styles/ProjectCard.css
@@ -1,17 +1,18 @@
 .project-card {
     /* Add shadows to create the "card" effect */
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); */
     transition: 0.3s;   
     max-width: 20em;
 }
 
 /* On mouse-over, add a deeper shadow */
 .project-card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+    /* box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2); */
 }
 
 .project-card img {
     max-width: 100%;
+    height: 15em;
     margin-top: 1em;
     border-radius: 5%;
 }
@@ -22,55 +23,65 @@
 
 /* Add some padding inside the card container */
 .card-info {
-    margin: 1em 1em;    
+    margin: 0em 1em;   
 }
 
-.card-info > .heading {
+.card-info > h1 {
     font-size: 2em;
     text-align: left;
     margin: 0;
 }
 
-.card-info > .subtitle {
+.card-info > h2 {
     font-size: 1.25em;
     margin: 0;
     color: gray;
     text-align: left;
 }
 
-.card-info > .body {
+.card-info > p {
     display: -webkit-box;
-    -webkit-line-clamp: 4;
-    -webkit-box-orient: vertical;
+   -webkit-line-clamp: 2;
+           line-clamp: 2; 
+   -webkit-box-orient: vertical;
     font-size: 1em;
     text-align: left;
-    white-space: pre-line;
     overflow: hidden;
     text-overflow: ellipsis;
-    max-height: 8em;
+    height: 3em;
 }
 
-.buttons-container {
-    display: block; 
-    height: 1vmax;
+
+.details-container {
+    margin: 1em;
+    height: 2em;
+    text-align: right;
 }
 
-.primary-btn {
-    background-color: var(--color1);
-    border: none;
-    font-weight: 600;
-    color: white;
+.details-container > a {
+    font-weight: 400;
+    color: var(--color1);
     padding: 10px;
-    font-size: 1em;
-    float: right;
-    margin: 1em 1em;
+    font-size: 1.2em;
+    padding: 0;
+}
+
+.details-container > a::after {
+    display:inline-block;
+
+    content: "\00a0\279c";
+    transition: transform .2s ease-in;
+}
+
+.details-container > a:hover::after {
+    transform: translateX(5px);
 }
 
 @media only screen and (max-width: 640px) {
     .project-card {
         width: 100%;
     }
-    .buttons-container {
-        height: 10vmax;
+    .image-container img {
+        height: 80%;
     }
 }
