Replaced socials with 'View Projects' and 'About Me' - Also replaced everything with grayscale for now so I can focus on contrast

--- a/ui/src/styles/App.css
+++ b/ui/src/styles/App.css
@@ -2,8 +2,8 @@
 /* * { outline: 1px solid #e6e3db; }  */
 
 :root {
-  --color1: #CA2422; 
-  --color2: #C83216; 
+  --color1: silver; 
+  --color2: gray; 
   --black: #11113D;
   --white: #FFFFFF;
   /* --white: #F6F6F6; */
