--- a/ui/src/styles/Profile.css
+++ b/ui/src/styles/Profile.css
@@ -65,20 +65,52 @@
     margin: 0;
 }
 
+/* TODO: Rename 'socials' to something more fitting later */
+
 .socials {
     margin-top: 2vmax;
     text-align: left;
 }
 
 .socials a:nth-child(1) {
-    padding-inline: 0;
-    padding-right: 5px;
+    margin-inline: 0;
 }
 
 .socials a {
-    padding-inline: 10px;
+    border: 1px solid var(--color1);
+    background-color: var(--white);
+    padding-inline: 2em;
+    margin-inline: 1em;
     font-size: 1.2rem;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+    -webkit-transition: background-color .3s ease-in;
+    -ms-transition: background-color .3s ease-in;
+    transition: all .3s ease-in;
+
 }
+
+.socials a:hover {
+    background-color: var(--black);
+    -webkit-transition: background-color .3s ease-in;
+    -ms-transition: background-color .3s ease-in;
+    transition: all .3s ease-in;
+    border-color: var(--black);
+    color: var(--white);
+
+}
+
+/* .socials a::after {
+    display:inline-block;
+
+    content: "\00a0\279c";
+    transition: all .2s ease-in;
+}
+
+.socials a:hover::after {
+    transform: translateX(5px);
+} */
+
 
 @media only screen and (max-width: 640px) {
     .profile {
