Port to AstroJS - Ported home page - Redesigned and ported navbar

--- a/src/components/Profile.astro
+++ b/src/components/Profile.astro
@@ -1,8 +1,11 @@
 ---
-import '../styles/profile.css';
 import { Image } from 'astro:assets';
 import asideImage from '../images/placeholder-1.png';
 ---
+
+<style>
+    @import '../styles/profile.css';
+</style>
 
 <div class="profile">
     <div class="introduction">
