--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,10 @@
 import Layout from '../layouts/Layout.astro';
 import Profile from '../components/Profile.astro';	
 
-import '../styles/general.css'
+import '../styles/general.css';
 ---
 
 <Layout title="Francis Tayag">
+	<Profile />
 	<Profile />
 </Layout>
