--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -4,7 +4,7 @@ let isToggled = false;
 ---
 
 <style>
-    @import '../styles/navbar.css';
+    @import '@styles/navbar.css';
 </style>
 
 <div class="navbar sticky">
