--- a/src/components/Profile.astro
+++ b/src/components/Profile.astro
@@ -1,10 +1,10 @@
 ---
 import { Image } from 'astro:assets';
-import asideImage from '../images/placeholder-1.png';
+import asideImage from '@images/placeholder-1.png';
 ---
 
 <style>
-    @import '../styles/profile.css';
+    @import '@styles/profile.css';
 </style>
 
 <div class="profile">
