--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,8 +1,8 @@
 ---
 const { title } = Astro.props;
 
-import Navbar from '../components/Navbar.astro';
-import Footer from '../components/Footer.astro';
+import Navbar from '@components/Navbar.astro';
+import Footer from '@components/Footer.astro';
 ---
 
 <html lang="en">
