--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Profile from '../components/Profile.astro';	
+import Layout from '@layouts/Layout.astro';
+import Profile from '@components/Profile.astro';	
 
-import '../styles/general.css';
+import '@styles/general.css';
 ---
 
 <Layout title="Francis Tayag">
