Redesigned hamburger for navbar

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,11 +1,6 @@
----
-
----
-
 <style>
     @import '@styles/navbar.css';
 </style>
-
 
 <script>
     let isToggled = false;
@@ -28,14 +23,14 @@
 
 <div class="navbar sticky">
     <div class="logo-container">
-        <a href="/" class="logo">Francis Tayag</a>
+        <a href="/">Francis Tayag</a>
     </div>
     
-    <div class="hamburger" id="hamburger">
+    <div id="hamburger">
         <input id="checkbox" type="checkbox" />
     </div>
     
-    <div class="links" id="links">
+    <div id="links">
         <a href="/projects">Projects</href>
     </div>
 
