Port projects list page to Astro

--- a/src/styles/general.css
+++ b/src/styles/general.css
@@ -1,5 +1,5 @@
 /* For debugging only */
-/* * { outline: 1px solid #e6e3db; }  */
+* { outline: 1px solid #e6e3db; } 
 
 :root {
   --color1: silver; 
