--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,7 @@ const { title } = Astro.props;
 
 import Navbar from '@components/Navbar.astro';
 import Footer from '@components/Footer.astro';
+import '@styles/general.css';
 ---
 
 <html lang="en">
