--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -3,7 +3,7 @@ import Layout from '@layouts/Layout.astro';
 import ProjectCard from '@components/ProjectCard.astro';
 
 import '@styles/projects.css';
-const projects = await Astro.glob('@content/**/*.md')
+const projects = await Astro.glob('@content/projects/**/*.md')
 
 ---
 
