--- a/src/pages/projects/[slug].astro
+++ b/src/pages/projects/[slug].astro
@@ -1,8 +1,7 @@
 ---
 import Layout from "@layouts/Layout.astro";
 import { getCollection } from "astro:content";
-
-const { slug } = Astro.params;
+import '@styles/project_details.css';
 
 export async function getStaticPaths() {
   const projectEntries = await getCollection('projects');
@@ -20,6 +19,15 @@ const { Content } = await entry.render();
 
 <Layout>
   <div class="project-details">
-    <h1>{entry.data.title}</h1>
+    <!-- <Slideshow images={project.images} /> -->
+
+    <article>
+      <h1>{entry.data.title}</h1>
+      <!-- <button onClick={handlePrevious}>Previous</button>
+      <button onClick={handleNext}>Next</button> -->
+      <Content />
+    </article>
+    
+  </div>
   </div>
 </Layout>
