--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,113 +1,104 @@
-.navbar {
-    font-size: 1.4em;
-    justify-content: space-between;
+#navbar {
     z-index: 1;
     background-color: var(--white);
-    /* box-shadow: 0 0 3px 1px var(--color1); */
-    /* background-color: red; */
+
+    /* position: fixed;
+    width: 100%; */
+
+    font-size: 1.25em;
 }
 
-.navbar div {
-    margin: 1em 2em;
-}
-
-.sticky {
-    position: fixed;
-    top: 0;
-    width: 100%;    
-}
-
-/* .sticky div {
-    margin-top: 0;
-} */
-
-.logo-container {
-    align-content: center;
-}
-.logo-container > a {
-    padding: 0 1em;
-}
-
-.navbar #links {
+#normal {
     display: flex;
-    justify-content: flex-end;
-}
-
-@media only screen and (max-width: 640px) {
-
-    .navbar {
-        flex-direction: column;
-        padding: 0;
-    }
-
-    .navbar>#links {
-        display: flex;
-        justify-content: center;
-    }
-
-    .logo-container {
-        display: flex;
-        justify-content: center;
-        text-align: center;
-    }
-    #links {
-        animation: linkFade ease-in 0.3s;
-        animation-iteration-count: 1;
-        animation-fill-mode: forwards;
-    }
-    .hide {
-        display: none !important;
-        flex: unset;
-    }
-    @keyframes linkFade {
-        0% {
-            transform: translateX(-30%);
-            opacity: 0;
-        }
-        100% {
-            transform: translateX(0);
-            opacity: 1;
-        }
-    }
+    justify-content: space-between;
     
+    margin: 1em 1.5em;
+    align-items: center;
 }
 
-.logo-container > a {
-    font-weight: 650;
-    float: left;
-    position: relative;
-    text-transform: uppercase;
+#logo {
+    display: inherit;   
+}
+
+#logo > a {
+    font-weight: 1000;
     letter-spacing: 2px;
 }
 
-.logo-container > a::before {
-    content: "";
-    position: absolute;
-    left: 0;
-    z-index: -1;
-    width: 100%;
-    height: 0;
-    transition: height 0.3s;
-    background: color-mix(in srgb, var(--color1) 50%, transparent);
+#links {
+    display: flex;
+    align-items: center;
 }
 
-.logo-container > a:hover::before {
-    top: 2;
-    left: 2;
-    height: 100%;
-}
-
-.navbar>#links a {
+#links a {
+    padding: 0.5em 0;
     padding-inline: 1.5rem;
+    text-align: center;
 }
+
+#contact {
+    margin-inline: 5em 0;
+    padding: 0.5em 1em;
+    border: 1px solid var(--color1);
+    border-radius: 1em;
+}
+
+#responsive {
+    display: none;
+}
+
+@media only screen and (max-width: 900px) {
+    @keyframes fromLeft {
+        from { transform: translateX(-100%); }
+        to { transform: translateX(0); }
+    }
+
+    @keyframes toLeft {
+        from { transform: translateX(0); }
+        to { transform: translateX(-150%); display: none; }
+    }
+
+    #links {
+        display: none;
+    } 
+    #hamburger {
+        display: flex !important;
+        align-self: center;
+    }
+    #responsive {
+        position: absolute;
+        width: 100%;
+        z-index: 1;
+        background-color: var(--white);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    #responsive.hide a {
+        animation: toLeft 0.4s ease-in;
+        animation-fill-mode: forwards;
+    }
+    #responsive a {
+        padding: 1em;
+        text-align: center;
+        animation: fromLeft 0.4s ease-in;
+        animation-fill-mode: backwards;
+    }
+    /* I acknowledge this is hacky but I don't want to use SASS right now */
+    
+    #responsive a:nth-child(1) { animation-delay: 0.1s; } 
+    #responsive a:nth-child(2) { animation-delay: 0.2s; }
+    #responsive a:nth-child(3) { animation-delay: 0.3s; }
+    #responsive a:nth-child(4) { animation-delay: 0.4s; }
+}
+
 
 
 /* ----- Hamburger Menu ----- */
 
 #hamburger {
     display: none;
-    max-width: 32px;
-    max-height: 32px;
+    border: 1px solid var(--color1);
 }
 
 .toggled {
@@ -122,15 +113,15 @@ input[type=checkbox] {
     opacity: 0;
     cursor: pointer;
     border: 1px solid black;
-    width: 32px;
-    height: 32px;
+    width: 3em;
+    height: 3em;
     display: inline-block;
     margin: 0;
 }
 
-@media only screen and (max-width: 640px) {
+/* @media only screen and (max-width: 1280px) {
     #hamburger {
         display: flex;
         align-self: center;
     }
-}
+} */
