Fix the 'toLeft' animation playing on page load

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -15,6 +15,10 @@
         console.log(responsive.classList);
 
     })
+
+    setTimeout(function(){
+        responsive.style.visibility = "visible";
+    }, 500);
     
     // // Sticky navbar
     // window.onscroll = function() {myFunction()};
